# SolarProject

./: CMakeLists.txt  main.cpp
headers/: SolarObject.h  engine.h  engine_globals.h  engine_methods.h  engine_structs.h
resources/models/: sword.mtl
src/: SolarObject.cpp  engine.cpp  engine_methods.cpp  engine_structs.cpp  main.cpp  renderer.cpp  rendererwoo.cpp  window.cpp
